# napari-dask-ndmeasure

./: README.md  cliff.toml  pyproject.toml
.github/workflows/: test.yml
src/napari_chunked_regionprops/: __init__.py  _measure.py  _widget.py  napari.yaml
src/napari_dask_ndmeasure/: __init__.py  _measure.py  _widget.py
tests/: test_measure.py  test_widget.py
