[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "napari-chunked-regionprops"
dynamic = ["version"]
description = "Out-of-core regionprops-style measurements for huge labelled images in napari"
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Laurent Guerard", email = "laurent.guerard@unibas.ch" }]
keywords = ["napari", "image processing", "regionprops", "dask", "bioimage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.9"
dependencies = [
    "napari>=0.7.1",
    "dask[array]>=2023.1.0",
    "numpy>=1.24",
    "pandas>=1.5",
    "scipy>=1.9",
    "qtpy",
    "magicgui",
]

[project.optional-dependencies]
# napari-chunked-regionprops itself doesn't pin a Qt binding at runtime (avoids
# conflicting with whatever the host napari install already brought in), but
# the test suite drives real Qt widgets and needs one.
dev = ["pytest", "pytest-qt", "PyQt5"]

[project.entry-points."napari.manifest"]
napari-chunked-regionprops = "napari_chunked_regionprops:napari.yaml"

[project.urls]
Homepage = "https://github.com/imcf/napari-chunked-regionprops"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/napari_chunked_regionprops"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 80
